src/test/ui/consts/issue-56164.stderr
error[E0277]: the trait bound `[closure@$DIR/issue-56164.rs:1:19: 1:21]: Fn<()>` is not satisfied
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^^^ expected an `Fn<()>` closure, found `[closure@$DIR/issue-56164.rs:1:19: 1:21]`
   |
   = help: the trait `~const Fn<()>` is not implemented for closure `[closure@$DIR/issue-56164.rs:1:19: 1:21]`
note: the trait `Fn<()>` is implemented for `[closure@$DIR/issue-56164.rs:1:19: 1:21]`, but that implementation is not `const`
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^^^
   = note: wrap the `[closure@$DIR/issue-56164.rs:1:19: 1:21]` in a closure with no arguments: `|| { /* code */ }`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
